# mojika

./: Cargo.toml
.github/workflows/: rust.yml
mojika/: Cargo.toml
mojika/src/: main.rs
mojika_discovery/: Cargo.toml
mojika_discovery/src/: lib.rs
src/: app.rs  chat.rs  connect.rs  gui.rs  lib.rs  main.rs  request.rs  requester.rs
src/app/: event.rs  mod.rs  peer.rs
src/discovery/: mod.rs
src/request/: certificate_verifier.rs  file.rs  mod.rs  protocol.rs  requester.rs  responder.rs  response.rs
